--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ERental"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Kategori.Kategori"></activity>
-        <activity android:name=".MenuActivity" />
+        <activity android:name=".Kategori.IsiKategoriActivity"></activity>
+        <activity android:name=".Profil.FormStoreActivity" />
+        <activity android:name=".Profil.PasangSewaActivity" />
+        <activity android:name=".Profil.StoreActivity" />
+        <activity android:name=".Profil.ProfilActivity" />
         <activity android:name=".RegisterActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -20,9 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
-
     <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
