--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ERental"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Kategori.IsiKategoriActivity"></activity>
+        <activity android:name=".Order.OrderActivity"></activity>
+        <activity android:name=".Checkout.CheckoutActivity" />
+        <activity android:name=".Detail.DetailBarangActivity" />
+        <activity android:name=".Profil.EditProfilActivity" />
+        <activity android:name=".Kategori.IsiKategoriActivity" />
         <activity android:name=".Profil.FormStoreActivity" />
         <activity android:name=".Profil.PasangSewaActivity" />
         <activity android:name=".Profil.StoreActivity" />
@@ -25,8 +29,11 @@
         </activity>
         <activity android:name=".MainActivity" />
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
