--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,10 @@ dependencies {
 
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
-
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
+    implementation 'com.github.smarteist:autoimageslider:1.4.0-appcompat'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     
 }
