--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ERental"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Notif.NotificationActivity"></activity>
+        <activity android:name=".Rating.RatingActivity"></activity>
+        <activity android:name=".Notif.NotificationActivity" />
         <activity android:name=".Profil.Detail_BookedActivity" />
         <activity android:name=".Profil.BookedActivity" />
         <activity android:name=".Order.OrderActivity" />
@@ -35,11 +36,11 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
 </manifest>
