--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.wahyukurnia.erental">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,9 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ERental"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Barang.Detail_BarangSewaActivity"></activity>
+        <activity android:name=".PesananMasuk.Detail_PesananMasukActivity"></activity>
+        <activity android:name=".Barang.BarangActivity" />
+        <activity android:name=".Barang.Detail_BarangSewaActivity" />
         <activity android:name=".DetailStore.DetailStoreActivity" />
-        <activity android:name=".Kategori.SearchActivity"></activity>
+        <activity android:name=".Kategori.SearchActivity" />
         <activity android:name=".Rating.RatingActivity" />
         <activity android:name=".Notif.NotificationActivity" />
         <activity android:name=".Pesanan.Detail_BookedActivity" />
@@ -44,6 +40,11 @@
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
     </application>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
