--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.zjywill:OverwatchProgress:1.6'
+    implementation 'com.daimajia.swipelayout:library:1.2.0@aar'
 
     
 }
